- implement a storage for conflicts to have more control over active conflicts
- can now analyze dual unbounded rays of primal infeasible LPs
- a print callback can now be specified for user expressions
- added interval-evaluation of sine and cosine
- add nonlinear optimization-based bound propagator solving two convex NLP relaxations for each variable

parameters:
- new parameter "solvingphases/enabled" to activate adaptive behavior during the solution process; several further parameters
  in the solvingphases-section to control how to switch the parameters, and whether a restart should be performed between the phases.
- new parameter misc/referencevalue to pass a reference value for further analysis of the tree search, see also in 'features'
- new parameter sepaperspective to turn on separation of perspective cuts for indicator contraints
- new parameter sepapersplocal to decide whether local cuts can be used for perspective cuts for indicator contraints
- new parameter branching/relpscost/usesmallweightsitlim to use smaller weights for pseudo cost updates when LP
  iteration limit was hit
- new parameter class randomization
- moved permutationseed from misc to randomization
- new parameter randomization/lpseed to set the initial seed of the LP solver
- setting a value for a fixed parameter will no longer return with an error, if the new value equals the one to which the parameter is fixed
- parameters "misc/permutationseed", "misc/permuteconss", and "misc/permutevars" changed to "randomization/permutationseed",
  "randomization/permuteconss", and "randomization/permutevars"
- parameters "conflict/useinflp" and "conflict/useboundlp" are now of type char (before bool)
- add maximum branch-and-bound tree depth constant SCIP_MAXTREEDEPTH (replaces SCIPgetDepthLimit and SCIPtreeGetDepthLimit)

performance improvements:
- successful propagation with DURINGLPLOOP timing now triggers a new round of node solving, starting with BEFORELP
  propagation